# OpenCV-2.4.13

./: GCC-4.8.txt  README.md  compileOpencv_Ubuntu16.py  compileOpencv_Ubuntu18.py  packageOpencv.sh
BallDetector/Video/: qiproject.xml
opencv/: install16.sh  install18.sh
samples/BallDetector/Image/: main.cpp  qiproject.xml
samples/BallDetector/Video/: CMakeLists.txt
samples/BallDetector/naoqi/: installer.sh
samples/examples/: CMakeLists.txt  displayVideo.cpp  frame.cpp  image.cpp  text.cpp  video.avi
samples/naoqi/BallDetector/Image/: CMakeLists.txt  cascade.xml
samples/naoqi/BallDetector/Video/: main.cpp
samples/naoqi/sdk/: installer.sh
